--- a/views/nav.pug
+++ b/views/nav.pug
@@ -1,5 +1,5 @@
 script. 
-    //- // script to dynamically add 'active' class based on the current URL for navbar links
+    //- script to dynamically add 'active' class based on the current URL for navbar links
     document.addEventListener('DOMContentLoaded', () => {
         const navbarItems = document.querySelectorAll('.navbar-item');
         navbarItems.forEach(item => {
