--- a/assets/styles.css
+++ b/assets/styles.css
@@ -45,7 +45,7 @@ body {
 .navbar-item.active {
   > .navbar-link {
     text-decoration-thickness: 2px;
-    text-underline-offset: 5px;
+    text-underline-offset: 0.7rem;
     text-decoration: underline;
     color: rgb(36, 157, 82);
   }
