--- a/assets/styles.css
+++ b/assets/styles.css
@@ -24,7 +24,7 @@ body {
 
 .navbar-item {
   transition: all 200ms ease-in-out;
-  border: 0.8px solid transparent;
+  border: 2px solid transparent;
   padding: 0.5rem 1.2rem;
   list-style-type: none;
   border-radius: 12px;
@@ -41,7 +41,7 @@ body {
   text-decoration: none;
 }
 
-/* if the current page is active */
+/* change styles  if the current page is active */
 .navbar-item.active {
   > .navbar-link {
     text-decoration-thickness: 2px;
