--- a/views/home.pug
+++ b/views/home.pug
@@ -4,11 +4,13 @@ block title
     title TP Node - Home
 
 block content
+    h2 Add student
+    include form.pug
     ul
-        //- if users array doesn't exist or if it is empty, show a msg
-        if !users || users.length === 0
-            p.no-user-msg Aucun utilisateur enregistré. 
+        //- if students array doesn't exist or if it is empty, show a msg
+        if !students || students.length === 0
+            p.no-student-msg No student registered yet. 
         else
-            each user in users
-                li= user.name
-                li= user.birth
+            each student in students
+                li= student.name
+                li= formatDate(student.birth)
