styles: refactor styles

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -13,6 +13,12 @@ body {
   display: flex;
 }
 
+.navbar-link,
+.container li,
+h2 {
+  color: rgba(220, 220, 220, 0.9);
+}
+
 /* ----- Navbar ----- */
 
 .navbar {
@@ -37,7 +43,6 @@ body {
 }
 
 .navbar-link {
-  color: rgba(220, 220, 220, 0.9);
   text-decoration: none;
 }
 
@@ -63,11 +68,6 @@ body {
   align-items: center;
 }
 
-.container li {
-  color: rgba(220, 220, 220, 0.9);
-}
-
-.no-user-msg {
+.no-student-msg {
   color: rgba(255, 103, 103, 0.9);
-  font-weight: 600;
 }
