refactor(nav.pug) replace "users" by "students"

--- a/views/nav.pug
+++ b/views/nav.pug
@@ -14,4 +14,4 @@ script.
 nav
     ul.navbar
         li.navbar-item: a(href="/" class="navbar-link") Home
-        li.navbar-item: a(href="/users" class="navbar-link") Users
+        li.navbar-item: a(href="/students" class="navbar-link") Students
