--- a/views/form.pug
+++ b/views/form.pug
@@ -3,4 +3,4 @@
 form(action='/' method='POST')
     input(type='text' name="name")
     input(type='date' name='birth' max=maxDate value=maxDate)
-    button(type='submit') Add student 
+    button.add-user-btn(type='submit') Add student 
