--- a/assets/styles.css
+++ b/assets/styles.css
@@ -31,6 +31,7 @@ button {
 }
 
 input {
+  font-family: Verdana, 'Times New Roman', Times, serif;
   padding: 0.5rem 1.2rem;
   border-radius: 4px;
 }
