--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -22,6 +22,10 @@ h2,
   color: rgba(220, 220, 220, 0.9);
 }
 
+h2 {
+  font-size: 3rem;
+}
+
 button,
 .delete-student-btn {
   padding: 0.5rem 1.2rem;
